[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/stub_level.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/players.gd" type="Script" id=3]
[ext_resource path="res://scenes/pause_screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game_over.tscn" type="PackedScene" id=5]

[node name="game" type="Node"]

process/pause_mode = 1
script/script = ExtResource( 1 )

[node name="level" parent="." instance=ExtResource( 2 )]

[node name="players" type="Node2D" parent="."]

script/script = ExtResource( 3 )

[node name="pause_screen" parent="." instance=ExtResource( 4 )]

visibility/visible = false
z/z = 1

[node name="game_over_screen" parent="." instance=ExtResource( 5 )]

visibility/visible = false

[node name="game_over_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="player_died" from="players" to="." method="_on_players_player_died"]

[connection signal="restart" from="pause_screen" to="." method="_on_restart"]

[connection signal="restart" from="game_over_screen" to="." method="_on_restart"]

[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]


